[package]
name = "polling_application_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-session = "0.8.0"
actix-identity = "0.6.0"
webauthn-rs = "0.4.0"
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
argon2 = "0.5.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = "1.11.0"

[dev-dependencies]
mockall = "0.11.3"
